...
                                                        </connections>
                                                    </button>
                                                    <button opaque="NO" contentMode="scaleToFill" selected="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" reversesTitleShadowWhenHighlighted="YES" adjustsImageWhenDisabled="NO" lineBreakMode="middleTruncation" changesSelectionAsPrimaryAction="YES" preferredBehavioralStyle="pad" translatesAutoresizingMaskIntoConstraints="N
                                                        <rect key="frame" x="58" y="0.0" width="61.5" height="30"/>
                                                        <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                        <state key="normal" title="Button"/>
                                                        <buttonConfiguration key="configuration" style="filled" title="C++" cornerStyle="large">
                                                            <backgroundConfiguration key="background"/>
                                                            <fontDescription key="titleFontDescription" name="HiraginoSans-W6" family="Hiragino Sans" pointSize="10"/>
                                                            <color key="baseForegroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                            <color key="baseBackgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                        </buttonConfiguration>
                                                        <connections>
...
                        </constraints>
                        <connections>
                            <outletCollection property="gestureRecognizers" destination="WOG-zp-heT" appends="YES" id="9eg-Ha-pwH"/>
                        </connections>
                    </view>
                    <extendedEdge key="edgesForExtendedLayout"/>
                    <navigationItem key="navigationItem" title="GitHub Repository Search" largeTitleDisplayMode="always" id="JbT-oF-fTZ"/>
                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" barStyle="black" translucent="NO" prompted="NO"/>
                    <connections>
                        <outlet property="filterView" destination="rF8-tS-UVt" id="kvx-GR-y1G"/>
                        <outlet property="filterViewButton" destination="9dN-bJ-4l9" id="xYk-CQ-DEu"/>
                        <outlet property="langButtonC" destination="8Rv-WP-VWC" id="MeQ-J1-m43"/>
                        <outlet property="langButtonCPlusPlus" destination="BJc-2d-TE6" id="sq5-AG-hLl"/>
...
